Index con Banner

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <title>Mapa de Red de Monitoreo Participativo</title>
     </head>
     <body>
+        <div style="background-color:rgb(48, 158, 231); height:70px;">
+                <img src="./images/red_mop.png">
+        </div>
         <div id="map">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
